<resources>
    <string name="app_name">CXK通讯录</string>
    <string name="UserName">用户名</string>
    <string name="Password">密码</string>
    <string name="Login_title">CXK通讯录</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>

    <string name="login_title">CXK通讯录</string>
    <string name="login_username">账号</string>
    <string name="login_password">密码</string>
    <string name="login_log">登录</string>
    <string name="login_zhuce">注册</string>

    <string name="Title_add">新建联系人</string>
    <string name="add_name">姓名</string>
    <string name="add_tele">手机号</string>
    <string name="add_sex">性别</string>
    <string name="add_compay">公司</string>
    <string name="add_adress">家庭住址</string>
    <string name="register_number">账号，仅限字母和数字</string>
    <string name="register_password_first">密码</string>
    <string name="register_password_second">确认密码</string>
    <string name="register_button_back">取消</string>
    <string name="register_button_enter">确认</string>

    <string name="updata_title">修改联系人信息</string>


</resources>
