<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="338dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="624dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547">

        <TextView
            android:id="@+id/logon_title"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/Login_title"
            android:textAlignment="center"
            android:textColor="#2196F3"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="338dp"
        android:layout_height="208dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="71dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/sharpedit"
            android:gravity="left"
            android:hint="@string/register_number" />

        <EditText
            android:id="@+id/register_password_first"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/sharpedit"
            android:gravity="left"
            android:hint="@string/register_password_first" />

        <EditText
            android:id="@+id/register_password_second"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/sharpedit"
            android:gravity="left"
            android:hint="@string/register_password_second" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="302dp"
        android:layout_height="57dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="164dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

        <Button
            android:id="@+id/register_back"
            android:layout_width="121dp"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/sharpedit"
            android:text="@string/register_button_back"
            android:textSize="24sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/register_enter"
            android:layout_width="121dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/sharpedit"
            android:text="@string/register_button_enter"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>